[package]
name = "pageseer"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"
description = "Document-to-page-image rasterizer (Rust core + CLI)"
license = "MIT"
repository = "https://github.com/iyulab/pageseer"
readme = "README.md"
publish = false

[lib]
name = "pageseer"
path = "src/lib.rs"

[[bin]]
name = "pageseer"
path = "src/bin/pageseer.rs"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
pdfium-render = "0.9"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }

[dev-dependencies]
printpdf = "0.9"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
